deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecs-phoenix-ext
  namespace: phoenix
  labels:
    app.kubernetes.io/name: ecs-phoenix-ext
spec:
  selector:
    app.kubernetes.io/name: ecs-phoenix-ext
  ports:
    - name: http
      port: 80
      targetPort: http
